authelia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: authelia
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Authelia"
    gethomepage.dev/description: "SSO / forward auth"
    gethomepage.dev/group: "Cluster"
    gethomepage.dev/icon: "authelia.png"
spec:
  ingressClassName: external
  tls:
    - hosts:
        - auth.home.chrisscotmartin.com
      secretName: authelia-tls
  rules:
    - host: auth.home.chrisscotmartin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 80
